--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -57,7 +57,7 @@
 //
 // Condensed table w/ half padding
 //
-
+.table-condensed,
 .table-sm {
   // stylelint-disable-next-line selector-max-universal
   > :not(caption) > * > * {
