--- a/site/assets/scss/_navbar.scss
+++ b/site/assets/scss/_navbar.scss
@@ -18,6 +18,7 @@
     }
   }
 
+  .navbar-toggle,
   .navbar-toggler {
     padding: 0;
     margin-right: -.5rem;
@@ -46,6 +47,7 @@
     }
   }
 
+  .navbar-toggle,
   .navbar-toggler,
   .nav-link {
     padding-right: $spacer * .25;
