--- a/scss/forms/_labels.scss
+++ b/scss/forms/_labels.scss
@@ -2,6 +2,7 @@
 // Labels
 //
 
+.control-label,
 .form-label {
   margin-bottom: $form-label-margin-bottom;
   @include font-size($form-label-font-size);
