--- a/scss/mixins/_grid.scss
+++ b/scss/mixins/_grid.scss
@@ -101,6 +101,7 @@
         // `$columns - 1` because offsetting by the width of an entire row isn't possible
         @for $i from 0 through ($columns - 1) {
           @if not ($infix == "" and $i == 0) { // Avoid emitting useless .offset-0
+            .col#{$infix}-offset-#{$i},
             .offset#{$infix}-#{$i} {
               @include make-col-offset($i, $columns);
             }
